# 05-docflow

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_conn.txt
.commandcode/plans/: docflow-full-build-and-fixes.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
data/sample/: company_handbook.md  policies.html  product_docs.md  quarterly_report.csv
docflow/: __init__.py  config.py  main.py
docflow/admin/: __init__.py  cli.py
docflow/api/: __init__.py  documents.py  health.py  pipeline.py  router.py  sources.py
docflow/db/: __init__.py  models.py
docflow/parsers/: __init__.py  base.py  csv.py  docx.py  html.py  markdown.py  pdf.py
docflow/processing/: __init__.py  chunking.py  deduplication.py  embedding.py  fingerprint.py  metadata.py  versioning.py
docflow/queue/: __init__.py  dlq.py  redis_queue.py
docflow/storage/: __init__.py  object_store.py  vector_store.py
docflow/workers/: __init__.py  embed_worker.py  ingest_worker.py
docs/: API.md  ARCHITECTURE.md  CHUNKING.md  METADATA_SCHEMA.md  PIPELINE.md
tests/: conftest.py  test_api.py  test_chunking.py  test_deduplication.py  test_dlq.py  test_parsers.py  test_pipeline.py  test_versioning.py  test_workers.py
